# Ava

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/data/artifacts/2893912e-2a76-4b2b-92d6-c244a3fb2478/: 590e1c28-7989-41c1-a669-248c098d2ecb.xlsx
apps/api/data/artifacts/3009315b-9260-4d78-834d-62615ee73bd0/: eecb9c09-cb1d-4b06-bb0f-78a46a5c2e02.xlsx
apps/api/data/artifacts/4465b9ff-146c-40ff-b8a2-5999d1710283/: 8e86e1f8-0602-4e80-9406-33da30211ecd.docx
apps/api/src/ava_api/: __init__.py  config.py  db.py  main.py  schemas.py  validation.py  worker.py
apps/api/src/ava_api/agents/: demo_plan.py  l1_planner.py  l2_decomposer.py  l2_subgraph.py  persona_graphs.py  personas.py  swarm_graph.py  tier_graph.py
apps/api/src/ava_api/artifacts/: app_html.py  dashboard.py  docx.py  excel.py  pptx.py  replicate.py
apps/api/src/ava_api/benchmarks/: deepsearchqa.py  gaia.py
apps/api/src/ava_api/cli/: main.py
apps/api/src/ava_api/executor/: blocks.py  dag.py  pipeline.py  runner.py
apps/api/src/ava_api/platform/: __init__.py  compaction.py  connectors.py  ee.py  mcp_server.py  memory.py  nango.py  oauth_pkce.py  observability.py  rate_limit.py  reliability.py  routing.py  storage.py
apps/api/src/ava_api/routes/: audit.py  auth.py  bench.py  canvases.py  connectors.py  marketplace.py  outputs.py  planning.py  runs.py  swarm.py
apps/api/tests/: test_dag.py  test_hitl.py  test_l2_plan.py  test_persona_subgraphs.py  test_phase3_l1.py  test_routing.py  test_runner.py
(+45 files in other folders)
